--- a/index.html
+++ b/index.html
@@ -3,13 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Divyashi</title>
+    <title>Divyashi's Personal Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Hello, World!</h1>
-        <p>This is a basic webpage example.</p>
-    </div>
-</body>
-</html>
+    <header class="header">
+        <nav class="navbar">
+            <div class="container">
+                <a href="#" class="logo">Divyashi</a>
+                <ul class="nav-links">
+                    <!-- Update the <a> tags with appropriate section IDs or external links -->
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="https://github.com/divyashia" target="_blank">GitHub</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- <div class="hero">
+            <div class="container">
+                Change the source attribute to the path of your profile picture -->
+                <!-- <img src="your-profile-picture.jpg" alt="Divyashi" class="profile-img">
+            </div>
+        </div> -->
+    </header>
+
+    <section id="about" class="about">
+        <div class="container">
+            <h2 class="section-title">About Me</h2>
+            <!-- Add your own content here to describe yourself -->
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a libero ut libero feugiat aliquam nec sit amet dui.</p>
+        </div>
+    </section>
+
+    <section id="education" class="education">
+        <div class="container">
+            <h2 class="section-title">Education</h2>
+            <!-- Update this with your education information -->
+            <p>Master of Science in Computer Science, XYZ University</p>
+        </div>
+    </section>
+
