--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <!-- Add your own content here to describe yourself -->
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a libero ut libero feugiat aliquam nec sit amet dui.</p>
+            <p>Hi, my name is Divyahi Agrawal. I am an international student from India.</p>
         </div>
     </section>
 
@@ -39,7 +39,7 @@
         <div class="container">
             <h2 class="section-title">Education</h2>
             <!-- Update this with your education information -->
-            <p>Master of Science in Computer Science, XYZ University</p>
+            <p>Currently, I am an undergraduate student at University of California, Berkeley. I am a Senior pursuing a Bachelors is Science degree in Electrical Engineering and Computer Science.</p>
         </div>
     </section>
 
