add picture to github

--- a/index.html
+++ b/index.html
@@ -16,19 +16,18 @@
                 </ul>
             </div>
         </nav>
-        <!-- <div class="hero">
+        <div class="hero">
             <div class="container">
-                Change the source attribute to the path of your profile picture -->
-                <!-- <img src="your-profile-picture.jpg" alt="Divyashi" class="profile-img">
+                <img src="IMG_4865.JPG" alt="Divyashi" class="profile-img">
             </div>
-        </div> -->
+        </div>
     </header>
 
     <section id="about" class="about">
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <!-- Add your own content here to describe yourself -->
-            <p>Hi, my name is Divyahi Agrawal. I am an international student from India.</p>
+            <p>Hi, my name is Divyashi Agrawal. I am an international student from India.</p>
         </div>
     </section>
 
