--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <nav class="navbar">
             <div class="container">
-                <a href="#" class="logo">Divyashi</a>
+                <a href="#" class="logo">Divyashi Agrawal</a>
                 <ul class="nav-links">
                     <li><a href="https://github.com/divyashia" target="_blank">GitHub</a></li>
                 </ul>
@@ -26,16 +26,24 @@
     <section id="about" class="about">
         <div class="container">
             <h2 class="section-title">About Me</h2>
-            <!-- Add your own content here to describe yourself -->
-            <p>Hi, my name is Divyashi Agrawal. I am an international student from India.</p>
+            <p>Hi, my name is Divyashi Agrawal!</p>
         </div>
     </section>
 
     <section id="education" class="education">
         <div class="container">
             <h2 class="section-title">Education</h2>
-            <!-- Update this with your education information -->
             <p>Currently, I am an undergraduate student at University of California, Berkeley. I am a Senior pursuing a Bachelors is Science degree in Electrical Engineering and Computer Science.</p>
         </div>
     </section>
+
+    <section id="project-experience" class="project-experience">
+        <div class="container">
+            <h2 class="section-title">Projects</h2>
+            <p>I have taken tech classes at Berkeley like CS61A, CS61B and more, and therefore, have completed numerous projects needed to complete the class. Some of those projects include CS61B BYOW, CS61C Classify, CS61C CPU, CS188 Pacman projects and many more.</p>
+        </div>
+    </section>
+
+</body>
+</html>
 
